# solana-multi-token-otc

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
backend_heroku/: .gitignore  alembic.ini  app.py  deal.py  models.py  requirements.txt  tools.py
backend_heroku/alembic/: env.py
backend_heroku/alembic/versions/: 5075c4ce71c8_init.py
backend_heroku/data/: deal_init_ex.json
client/: .eslintrc  .prettierrc  craco.config.js  package.json  tsconfig.extend.json  tsconfig.json
client/src/: App.scss  App.tsx  index.less  index.tsx
client/src/app/: hooks.ts  store.ts
client/src/components/Header/: Header.scss  Header.tsx  WalletButton.tsx
client/src/contracts-lib/: types.ts
client/src/contracts-lib/otc-contract/: idl.ts  otc-contract.ts
client/src/features/exchange/: CurrencyFieldArray.scss  CurrencyFieldArray.tsx  CurrencyInput.scss  CurrencyInput.tsx  Exchange.scss  Exchange.tsx  ExchangeForm.scss  ExchangeForm.tsx  UserNTFList.scss  UserNTFList.tsx  exchangeAPI.ts  exchangeSlice.ts
client/src/helpers/: getErrorMessage.ts  tokens.ts  utils.ts
client/src/hooks/: useModal.ts
client/src/models/: common.d.ts  token.d.ts
client/src/scss/: _mixin.scss  _variables.scss
parser/: main.js  package-lock.json  package.json  requester.js
programs/convergence-hack/: Cargo.toml
programs/convergence-hack/src/: lib.rs
tests/: convergence-hack.ts
